--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <section class="main">
       <h1>Bold, Geometric,</h1>
       <h1>Constructivist</h1>
-      <div class="main-image"></div>
+      <div class="main-image">
       <img src="A background filled with large, angular geometric shapes including rectangles and triangles in bold red and black, arranged in a dynamic, asymmetrical layout..jpg">
+    </div>
     </section>
 
     <section class="projects">
